# Qt-Clean-Architecture

./: .gitignore  CMakeLists.txt  README.md
sources/adapters/: CMakeLists.txt  adapters_global.h  adapters_registration.cpp  adapters_registration.h  undo_controller.cpp  undo_controller.h
sources/adapters/author/: author_controller.h  author_undo_commands.cpp  author_undo_commands.h
sources/application/: CMakeLists.txt  application_global.h  application_registration.h  handler.cpp  handler.h  validation_exception.h
sources/application/features/author/handlers/commands/: create_author_command_handler.cpp  create_author_command_handler.h  remove_author_command_handler.cpp  remove_author_command_handler.h  update_author_command_handler.cpp  update_author_command_handler.h
sources/contracts/: CMakeLists.txt  contracts_global.h  error.h  exception.h  result.cpp  result.h  wait_in_event_loop.h
sources/contracts/automapper/: automapper.h
sources/contracts/cqrs/author/commands/: create_author_command.h  remove_author_command.h  update_author_command.h
sources/contracts/cqrs/author/requests/: get_author_request.h  get_author_with_details_request.h
sources/contracts/cqrs/author/validators/: create_author_command_validator.h  update_author_command_validator.h
sources/contracts/cqrs/system/commands/: save_system_as_command.h
sources/contracts/cqrs/system/validators/: save_system_as_command_validator.h
sources/contracts/database/: interface_database.h  interface_database_context.h
sources/contracts/dto/author/: author_dto.h  author_dto_base.h  create_author_dto.h  update_author_dto.h
sources/contracts/dto/system/: save_system_as_dto.h
sources/contracts/persistence/: interface_author_repository.h  interface_generic_repository.h  interface_repositories.h  interface_repository.h
sources/core/application/: CMakeLists.txt  application_global.h  handler.h
sources/core/application/features/author/handlers/commands/: create_author_command_handler.cpp  create_author_command_handler.h  remove_author_command_handler.cpp  remove_author_command_handler.h  update_author_command_handler.cpp  update_author_command_handler.h
sources/core/application/features/author/handlers/queries/: get_author_list_request_handler.cpp  get_author_list_request_handler.h  get_author_request_handler.cpp  get_author_request_handler.h
sources/core/application/features/system/handlers/commands/: close_system_command_handler.cpp  load_system_command_handler.cpp  load_system_command_handler.h  save_system_as_command_handler.cpp  save_system_as_command_handler.h
sources/core/contracts/: CMakeLists.txt  contracts_global.h  error.h  exception.h  result.h  wait_in_event_loop.h
sources/core/contracts/cqrs/author/commands/: remove_author_command.h
sources/core/contracts/database/: interface_database.h  interface_database_context.h
sources/core/contracts/dto/author/: author_dto.h  author_dto_base.h  create_author_dto.h
sources/core/contracts/dto/system/: load_system_dto.h  save_system_as_dto.h
sources/core/contracts/infrastructure/skrib/: interface_skrib_loader.h
sources/core/contracts/persistence/: interface_author_repository.h  interface_generic_repository.h  interface_repository.h  interface_repository_provider.h
sources/core/domain/: CMakeLists.txt  author.h  domain_global.h  entity.h
sources/core/infrastructure/: CMakeLists.txt  infrastructure_global.h  infrastructure_registration.h  skrib_loader.cpp  skrib_loader.h
sources/core/infrastructure/skrib/: skrib_loader.cpp  skrib_loader.h
sources/core/persistence/: CMakeLists.txt  persistence_global.h  persistence_registration.cpp  persistence_registration.h
sources/core/persistence/database/: database_context.cpp  database_context.h  internal_database.h
sources/core/persistence/repositories/: author_repository.h  generic_repository.h  repository_provider.h
sources/domain/: CMakeLists.txt  author.h  domain_global.h  entity.h
sources/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
sources/gui/desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
sources/gui/desktop/i18n/: example-desktop_en_US.ts  skribisto-desktop_en_US.ts
sources/gui/presenter/: CMakeLists.txt  presenter_global.h  presenter_registration.cpp  presenter_registration.h  scoped_command_queue.cpp  scoped_command_queue.h  undo_controller.cpp  undo_controller.h
sources/gui/presenter/author/: author_controller.cpp  author_controller.h  author_signal_bridge.h  author_undo_commands.cpp  author_undo_commands.h
sources/gui/presenter/system/: system_controller.cpp  system_controller.h  system_signal_bridge.h  system_undo_command.cpp  system_undo_command.h
sources/gui/presenter/undo_redo/: query_command.cpp  query_command.h  threaded_undo_redo_system.cpp  threaded_undo_redo_system.h  undo_redo_command.cpp  undo_redo_command.h  undo_redo_system.cpp  undo_redo_system.h
sources/persistence/: CMakeLists.txt  persistence_global.h  persistence_registration.cpp  persistence_registration.h
sources/persistence/database/skrib/: skrib_file.h  skrib_file_context.cpp  skrib_file_context.h
sources/persistence/repositories/: author_repository.cpp  author_repository.h  generic_repository.h  repositories.cpp  repositories.h
sources/presenter/: CMakeLists.txt  presenter_global.h  presenter_registration.cpp  presenter_registration.h  undo_controller.cpp  undo_controller.h
sources/presenter/author/: author_controller.h  author_undo_commands.cpp  author_undo_commands.h
sources/presenter/system/: system_controller.h
tests/: CMakeLists.txt
tests/automapper/: CMakeLists.txt  tst_automapper.cpp
tests/database/: CMakeLists.txt
tests/dto/: CMakeLists.txt  tst_dto.cpp
tests/presenter/: CMakeLists.txt  dummy_author_repository.h  tst_presenter.cpp
tests/repository/: CMakeLists.txt  dummy_database.h  tst_repository.cpp
tests/skrib_database/: CMakeLists.txt  tst_skrib_database.cpp
tests/undo_redo/: CMakeLists.txt  tst_undo_redo.cpp
tests/usecases/: CMakeLists.txt  dummy_author_repository.h  dummy_repositories.h  tst_usecases.cpp
(+14 files in other folders)
